feat: add fido2 server

--- a/client/views/index.hbs
+++ b/client/views/index.hbs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
-    {{> head title="Frame"}}
+    {{> head title="FIDO2"}}
   <body>
     <div id="root"></div>
     {{> footer}}
